--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         with:
             url: "http://api.github.com/repos/fiasmd9/SampleInsurance/actions/runs"
             expected-response-field: "name"
+            expected-response-field-value: ${{env.EXPECTED_API_VERSION}}
             
         env:
             GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
