--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout Code
       - uses: actions/checkout@v2
 
       - name: Wait for API Action
-        uses: fiasmd9/action-wait-for-api@v1.0.0
+        uses: fiasmd9/action-wait-for-api@main
         with:
-            url: "http://api.github.com/repos/fiasmd9/SampleInsurance/actions/runs"
-            expected-response-field: "name"
-            expected-response-field-value: ${{env.EXPECTED_API_VERSION}}
+            url: "https://baluquebectesting.service-now.com/api/sn_devops/v1/devops/getChangeStatus"
+            expected-status: "200"
+            timeout: 20
+            interval: 2
             
         env:
             GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
